--- a/manifest.json
+++ b/manifest.json
@@ -1,17 +1,15 @@
 {
-  "manifest_version": 2,
+    "manifest_version": 2,
 
-  "name": "Tabby",
-  "description": "This extension organizes your tabs in chrome.",
+    "name": "Tabby",
+    "description": "This extension organizes your tabs in chrome.",
     "version": "1.0",
 
     "browser_action": {
-      "default_icon": "icon.png",
-      "default_popup": "popup.html"
+        "default_icon": "icon.png",
+        "default_popup": "popup.html"
     },
 
-    "permissions": [
-      "tabs" //need to add tab permissions so i can have access to tab urls, favIconUrl, and title etc..
-
-    ]
+    "permissions": ["tabs", "storage"] //need to add tab permissions so i can have access to tab urls, favIconUrl, and title etc..
+    // ["storage"] /to use chrome's localStorage API
 }
