--- a/manifest.json
+++ b/manifest.json
@@ -10,6 +10,7 @@
         "default_popup": "popup.html"
     },
 
-    "permissions": ["tabs", "storage"] //need to add tab permissions so i can have access to tab urls, favIconUrl, and title etc..
+    "permissions": ["tabs", "storage"] //need to add tab permissions so i can have access to tab urls, 
+    //favIconUrl, and title etc..
     // ["storage"] /to use chrome's localStorage API
 }
